accessibility category of nav bar updated

--- a/EAM_3/acs_instrc.html
+++ b/EAM_3/acs_instrc.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>ΟΑΣΑ Οργανισμός</title>  
+    <title>ΟΑΣΑ Οδηγίες Πρόσβασης</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -148,62 +148,105 @@
         </nav>
     </header>
     <!--end of HEADER-->
-
+    
     <div class="all-title-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2> Προφίλ Οργανισμού ΟΑΣΑ</h2>
+					<h2>Οδηγίες Πρόσβασης</h2>
 				</div>
 			</div>
 		</div>
     </div>
 
-    <!-- SECTION-->
-	<div class="about-box">
-    	<div class="container">
+    <!-- SECTION -->
+    <div class="about-box">
+        <div class="container ">
             <!-- Breadcrumbs -->
             <nav id="breadcrumbs">
                 <ul>
                     <li><a href="index.html"><i class="fa fa-home global-radius fa-lg"></i></a></li>
-                    <li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
-                    <li>Προφίλ Οργανισμού ΟΑΣΑ</li>
+                    <li><a href="accesibility.html">Προσβασιμότητα</a></li>
+                    <li>Οδηγίες Πρόσβασης</li>
                 </ul>
             </nav>
-            
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Ιστορία</h4>
-                            <p style="text-align: center;">Η Ανώνυμη Εταιρεία με την επωνυμία «ΟΡΓΑΝΙΣΜΟΣ ΑΣΤΙΚΩΝ ΣΥΓΚΟΙΝΩΝΙΩΝ ΑΘΗΝΩΝ» και τον διακριτικό τίτλο «Ο.Α.Σ.Α. Α.Ε.»
-                                 είναι δημόσια επιχείρηση κοινωφελούς χαρακτήρα που ιδρύθηκε ως νομικό πρόσωπο ιδιωτικού δικαίου με τον ν.2175/93 (Α΄211) και υπόκειται νομοθετικά στις διατάξεις των ν. 3920/2011 (Α’ 33), ν. 3429/2005 (Α’ 314),
-                                ν. 4389/2016 (Α’ 94) και ν. 4548/2018 (Α’ 104), όπως ισχύουν.</p>
-					</div> 
-				</div>
+
+        </br>
+        </br>
+            <div class="section-title text-center">
+                <h3>Αναλυτικά οδηγίες για τα διάφορα μέσα του ΟΑΣΑ</h3>
             </div>
 
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Διοικητικό Συμβούλιο</h4>
-                            <p style="text-align: center;">Το Διοικητικό Συμβούλιο είναι το Ανώτατο Διοικητικό και το κατ’ εξοχήν Αποφασιστικό Οργανο του Οργανισμού και είναι αρμόδιο να αποφασίζει,
-                                 να εποπτεύει και να ασκεί έλεγχο σε κάθε θέμα που αφορά στην οργάνωση, στη διοίκηση, στη λειτουργία, στη διαχείριση της περιουσίας και γενικά στη δραστηριότητα και στην επιδίωξη των σκοπών του Οργανισμού.</p>
-					</div> 
-				</div>
+            <div>
+                <p style="text-align: center;">
+                    Εάν η πρόσβαση προς τις ράμπες επιβίβασης-αποβίβασης των λεωφορείων ή τους σταθμούς εμποδίζονται από παράνομα παρκαρισμένα οχήματα ή έχετε οποιαδήποτε απορία, 
+                    παρακαλώ ενημερώστε μας <a href="contact.html" style="color: #00599C;"> εδώ.</a>
+                </p>
             </div>
-
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Περιοχή Εξυπηρέτησης</h4>
-                            <p style="text-align: center;">Η σημερινή Περιοχή Εξυπηρέτησης των Αστικών Συγκοινωνιών έχει καθορισθεί δια νόμου και δεν μπορεί να μεταβληθεί χωρίς αντίστοιχη νομοθετική ρύθμιση.
-                                Η περιοχή που εξυπηρετείται σήμερα από αστική συγκοινωνία εκτείνεται Δυτικά μέχρι την Ελευσίνα, Μάνδρα και Μαγούλα (Θριάσιο Πεδίο). Ανατολικά μέχρι την Πεντέλη, την Παλλήνη, τα Σπάτα, τη Λούτσα και το Κορωπί (περιοχή Μεσογείων).
-                                Βόρεια μέχρι τη Φυλή, τη Πάρνηθα, το Κρυονέρι, το φράγμα της Λίμνης του Μαραθώνα, το Διόνυσο, τη Σταμάτα και τη Νέα και την Παλαιά Πεντέλη. Νότια μέχρι τη θάλασσα και νοτιοανατολικά μέχρι και την Σαρωνίδα. Η περιοχή αυτή περιλαμβάνει ένα σύνολο 84 δήμων και κοινοτήτων/οικισμών.</p>
-                                <p>Σημ.*:Με την εφαρμογή του N.3852/10, ΦΕΚ 87/τ .Α'/2010 «Καλλικράτης» οι 84 υφιστάμενες Τοπικές Αυτοδιοικήσεις συνενώνονται σε 52 Δήμους. (Ημερομηνία Εφαρμογής: 1/1/2011)</p>
-					</div> 
-				</div>
+        </br>
+        </br>
+            <div class="accordion" id="accordion-tab-1">
+                <div class="card">
+                    <div class="card-header" id="accordion-tab-1-heading-1">
+                        <h2 style="font-size: 70%;">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-1-content-1" aria-expanded="false" aria-controls="accordion-tab-1-content-1">
+                                ΜΕΤΡΟ (Γραμμή 2, 3):
+                            </button>
+                        </h2>
+                    </div>
+                    <div class="collapse" id="accordion-tab-1-content-1" aria-labelledby="accordion-tab-1-heading-1" data-parent="#accordion-tab-1">
+                        <div class="card-body">
+                            <ul style="list-style-type:circle;">
+                                <li><b>-</b> Πηγαίνεις στον πλησιέστερο σταθμό της οικίας σου ή της διαδρομής που επιθυμείς.</li>
+                                <li><b>-</b> Από τις ράμπες των πεζοδρομίων προσεγγίζεις τον ανελκυστήρα του σταθμού.</li>
+                                <li><b>-</b> Εισέρχεσαι στον ανελκυστήρα και κατεβαίνεις στις αποβάθρες των σταθμών. Όλοι οι ανελκυστήρες είναι πλήρως προσβάσιμοι και στην είσοδο και στην έξοδο τους. Εάν αντιμετωπίσεις πρόβλημα χρησιμοποίησε το κουδούνι κινδύνου.</li>
+                                <li><b>-</b> Από τις αποβάθρες εισέρχεσαι στους συρμούς είτε μόνος είτε με την βοήθεια του συνοδού σου ή των υπευθύνων των σταθμών, οι οποίοι θα σου παράσχουν κάθε δυνατή βοήθεια, όταν θα τους ζητηθεί. Η επιβίβαση-αποβίβαση για τα αναπηρικά αμαξίδια γίνεται ευκολότερη στο πρώτο ή το τελευταίο βαγόνι, γιατί φέρουν ράμπα για το κενό που υπάρχει μεταξύ αποβάθρας και συρμού και σχετική σήμανση.</li>
+                                <li><b>-</b> Εάν έχεις πρόβλημα όρασης ζήτησε βοήθεια από τον υπεύθυνο του σταθμού, ο οποίος θα σε βοηθήσει στην επιβίβαση και θα ενημερώσει τον υπεύθυνο του σταθμού που θα αποβιβασθείτε για να σε βοηθήσει.</li>
+                              </ul>
+                        </div>
+                    </div>
+                </div>
+                <hr class="hr4">
+                <div class="card">
+                    <div class="card-header" id="accordion-tab-1-heading-2">
+                        <h2 style="font-size: 70%;">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-1-content-2" aria-expanded="false" aria-controls="accordion-tab-1-content-2">
+                                ΗΛΕΚΤΡΙΚΟΣ ΣΙΔΗΡΟΔΡΟΜΟΣ (Γραμμή 1 του ΜΕΤΡΟ):
+                            </button>
+                        </h2>
+                    </div>
+                    <div class="collapse" id="accordion-tab-1-content-2" aria-labelledby="accordion-tab-1-heading-2" data-parent="#accordion-tab-1">
+                        <div class="card-body">
+                            <ul>
+                                <li><b>-</b> Ακολούθησε όλες τις παραπάνω οδηγίες, καρτέλα "ΜΕΤΡΟ (Γραμμή 2, 3)" γιατί όλοι οι σταθμοί του ΗΣΑΠ έχουν ανακαινισθεί για πλήρη πρόσβαση (Ράμπες, Ανελκυστήρες, Φύλακες κ.λ.π.).</li>
+                                <li><b>-</b> Εισέρχεσαι στους συρμούς από την πρώτη πόρτα του πρώτου βαγονιού, όπου υπάρχει και σχετική σήμανση.</li>
+                                <li><b>-</b> Στους σταθμούς Άγ. Νικολάου, Ομόνοιας, Μοναστηράκι καλέστε τους φύλακες να φέρουν την κινητή ράμπα και να σας βοηθήσουν, αφού την τοποθετήσουν, επειδή στους παραπάνω σταθμούς υπάρχει μεγάλο κενό μεταξύ αποβάθρας και συρμών. Υπάρχει σχετική σήμανση στα βαγόνια των συρμών και ηχητική ενημέρωση στους παραπάνω σταθμούς.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <hr class="hr4">
+                <div class="card">
+                    <div class="card-header" id="accordion-tab-1-heading-3">
+                        <h2 style="font-size: 70%;">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-1-content-3" aria-expanded="false" aria-controls="accordion-tab-1-content-3">
+                               ΛΕΩΦΟΡΕΙΑ/ΤΡΟΛΕΙ:
+                            </button>
+                        </h2>
+                    </div>
+                    <div class="collapse" id="accordion-tab-1-content-3" aria-labelledby="accordion-tab-1-heading-3" data-parent="#accordion-tab-1">
+                        <div class="card-body">
+                            <ul>
+                                <li><b>-</b> Πλησιάζεις την κοντινότερη στάση της λεωφορειακής γραμμής/γραμμής τρόλει που χρησιμοποιείς μόνος ή με την βοήθεια συνοδού.</li>
+                                <li><b>-</b> Να προτιμήσετε τις στάσεις με προεξοχές που έχουν τοποθετηθεί για εξυπηρέτηση των ατόμων με κινητικά προβλήματα, ηλικιωμένων και Αμεα.</li>
+                                <li><b>-</b> Όταν πλησιάζει το λεωφορείο/τρόλει σου, ο οδηγός όταν σταματήσει είναι υποχρεωμένος να χρησιμοποιήσει την επιγονάτηση ή την ράμπα, εάν έχει το λεωφορείο/τρόλει. Σχεδόν όλα τα λεωφορεία/τρόλει έχουν επιγονάτηση, ενώ το 1/4 αυτών φέρει ράμπες.</li>
+                                <li><b>-</b> Με την βοήθεια του συνοδού σου, των επιβατών ή του οδηγού επιβιβάζεσαι. Όλοι οι οδηγοί έχουν ενημερωθεί να παρέχουν κάθε βοήθεια.</li>              
+                            </ul>    
+                        </div>
+                    </div>
+                </div>
+                <hr class="hr4">
             </div>
-
         </div>
     </div>
     <!-- end of SECTION -->
@@ -275,13 +318,13 @@
 
     <!-- COPYRIGHTS -->
     <div class="copyrights">
-            <div class="container">
-                <div class="footer-distributed">
-                    <div class="footer-left">
-                        <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
-                    </div>
+        <div class="container">
+            <div class="footer-distributed">
+                <div class="footer-left">
+                    <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
                 </div>
-            </div><!-- end container -->
+            </div>
+        </div><!-- end container -->
     </div>
     <!-- end of COPYRIGHTS -->
 
