--- a/EAM_3/acs_news.html
+++ b/EAM_3/acs_news.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>ΟΑΣΑ Οργανισμός</title>  
+    <title>ΟΑΣΑ Ανακοινώσεις</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -153,58 +153,29 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2> Προφίλ Οργανισμού ΟΑΣΑ</h2>
+					<h2>Ανακοινώσεις</h2>
 				</div>
 			</div>
 		</div>
     </div>
 
-    <!-- SECTION-->
+    <!-- SECTION -->
 	<div class="about-box">
-    	<div class="container">
+		<div class="container">
             <!-- Breadcrumbs -->
             <nav id="breadcrumbs">
                 <ul>
                     <li><a href="index.html"><i class="fa fa-home global-radius fa-lg"></i></a></li>
-                    <li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
-                    <li>Προφίλ Οργανισμού ΟΑΣΑ</li>
+                    <li><a href="accesibility.html">Προσβασιμότητα</a></li>
+                    <li>Ανακοινώσεις</li>
                 </ul>
             </nav>
-            
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Ιστορία</h4>
-                            <p style="text-align: center;">Η Ανώνυμη Εταιρεία με την επωνυμία «ΟΡΓΑΝΙΣΜΟΣ ΑΣΤΙΚΩΝ ΣΥΓΚΟΙΝΩΝΙΩΝ ΑΘΗΝΩΝ» και τον διακριτικό τίτλο «Ο.Α.Σ.Α. Α.Ε.»
-                                 είναι δημόσια επιχείρηση κοινωφελούς χαρακτήρα που ιδρύθηκε ως νομικό πρόσωπο ιδιωτικού δικαίου με τον ν.2175/93 (Α΄211) και υπόκειται νομοθετικά στις διατάξεις των ν. 3920/2011 (Α’ 33), ν. 3429/2005 (Α’ 314),
-                                ν. 4389/2016 (Α’ 94) και ν. 4548/2018 (Α’ 104), όπως ισχύουν.</p>
-					</div> 
-				</div>
-            </div>
 
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Διοικητικό Συμβούλιο</h4>
-                            <p style="text-align: center;">Το Διοικητικό Συμβούλιο είναι το Ανώτατο Διοικητικό και το κατ’ εξοχήν Αποφασιστικό Οργανο του Οργανισμού και είναι αρμόδιο να αποφασίζει,
-                                 να εποπτεύει και να ασκεί έλεγχο σε κάθε θέμα που αφορά στην οργάνωση, στη διοίκηση, στη λειτουργία, στη διαχείριση της περιουσίας και γενικά στη δραστηριότητα και στην επιδίωξη των σκοπών του Οργανισμού.</p>
-					</div> 
-				</div>
+            <div>
+                Ανακοινώσεις
             </div>
-
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Περιοχή Εξυπηρέτησης</h4>
-                            <p style="text-align: center;">Η σημερινή Περιοχή Εξυπηρέτησης των Αστικών Συγκοινωνιών έχει καθορισθεί δια νόμου και δεν μπορεί να μεταβληθεί χωρίς αντίστοιχη νομοθετική ρύθμιση.
-                                Η περιοχή που εξυπηρετείται σήμερα από αστική συγκοινωνία εκτείνεται Δυτικά μέχρι την Ελευσίνα, Μάνδρα και Μαγούλα (Θριάσιο Πεδίο). Ανατολικά μέχρι την Πεντέλη, την Παλλήνη, τα Σπάτα, τη Λούτσα και το Κορωπί (περιοχή Μεσογείων).
-                                Βόρεια μέχρι τη Φυλή, τη Πάρνηθα, το Κρυονέρι, το φράγμα της Λίμνης του Μαραθώνα, το Διόνυσο, τη Σταμάτα και τη Νέα και την Παλαιά Πεντέλη. Νότια μέχρι τη θάλασσα και νοτιοανατολικά μέχρι και την Σαρωνίδα. Η περιοχή αυτή περιλαμβάνει ένα σύνολο 84 δήμων και κοινοτήτων/οικισμών.</p>
-                                <p>Σημ.*:Με την εφαρμογή του N.3852/10, ΦΕΚ 87/τ .Α'/2010 «Καλλικράτης» οι 84 υφιστάμενες Τοπικές Αυτοδιοικήσεις συνενώνονται σε 52 Δήμους. (Ημερομηνία Εφαρμογής: 1/1/2011)</p>
-					</div> 
-				</div>
-            </div>
-
-        </div>
+        </div>    
+    
     </div>
     <!-- end of SECTION -->
 
@@ -275,13 +246,13 @@
 
     <!-- COPYRIGHTS -->
     <div class="copyrights">
-            <div class="container">
-                <div class="footer-distributed">
-                    <div class="footer-left">
-                        <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
-                    </div>
+        <div class="container">
+            <div class="footer-distributed">
+                <div class="footer-left">
+                    <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
                 </div>
-            </div><!-- end container -->
+            </div>
+        </div><!-- end container -->
     </div>
     <!-- end of COPYRIGHTS -->
 
