--- a/EAM_3/contact.html
+++ b/EAM_3/contact.html
@@ -39,12 +39,6 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment-with-locales.js"></script>
-    <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
-
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
-
 </head>
 <body class="realestate_version">
 
@@ -58,7 +52,7 @@
     <header class="header header_style_01">
         <nav class="megamenu navbar navbar-default">
             <div class="container-fluid">
-               <!--NAV-HEADER (logo button to index.php)-->
+            <!--NAV-HEADER (logo button to index.php)-->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -73,7 +67,7 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Αρχική</a></li>
+                        <li><a class="active" href="index.html">Αρχική</a></li>
                         <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
@@ -85,10 +79,11 @@
                             </div>
                         </li>
                         <li class="dropdown" >
-                            <a href="#" class="dropbtn">Προσβασιμότητα</a>
+                            <a href="accesibility.html" class="dropbtn">Προσβασιμότητα</a>
                             <div class="dropdown-content">
-                                <a href="#">Σημεία Πρόσβασης</a>
-                                <a href="#">Ανακοινώσεις</a>
+                                <a href="acs_instrc.html">Οδηγίες Πρόσβασης</a>
+                                <a href="acs_points.html">Προσβάσιμα Σημεία</a>
+                                <a href="acs_news.html">Ανακοινώσεις</a>
                             </div>
                         </li> 
                         <li class="dropdown" >
@@ -98,49 +93,49 @@
                                 <a href="org.html">Προφίλ Οργανισμού</a>
                             </div>
                         </li>   
-                        <li><a class="active" href="contact.html">Επικοινωνία</a></li>
-						<li class="search-option">
-							<button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
-							<form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
-								<input type="text" placeholder="Αναζήτηση...">
-								<button class="p-color-bg"><i class="fa fa-search" aria-hidden="true"></i></button>
-							</form>
-                       </li> 
-                       <li>
-                            <div id="myModal" class="modal fade">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-body">
-                                            <button data-dismiss="modal" class="close">&times;</button>
-                                            <ul class="nav nav-tabs" role="tablist">
-                                                <li role="presentation" class="active">
-                                                    <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Σύνδεση</a>
-                                                </li>
-                                                <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Εγγραφή</a>
-                                                </li>
-                                            </ul>
-                                            <div class="tab-content">
-                                                <div role="tabpanel" class="tab-pane active" id="home">
-                                                    <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                        <input class="btn login" type="submit" value="Είσοδος"/>
-                                                    </form>
-                                                </div>
-                                                <div role="tabpanel" class="tab-pane" id="next">
-                                                    <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                        <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
-                                                        <input class="btn login" type="submit" value="Εγγραφή"/>
-                                                    </form>
-                                                </div>
+                        <li><a href="contact.html">Επικοινωνία</a></li>
+                        <li class="search-option">
+                            <button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            <form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
+                                <input type="text" placeholder="Αναζήτηση...">
+                                <button class="p-color-bg"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            </form>
+                    </li> 
+                    <li>
+                        <div id="myModal" class="modal fade">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <button data-dismiss="modal" class="close">&times;</button>
+                                        <ul class="nav nav-tabs" role="tablist">
+                                            <li role="presentation" class="active">
+                                                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Σύνδεση</a>
+                                            </li>
+                                            <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Εγγραφή</a>
+                                            </li>
+                                        </ul>
+                                        <div class="tab-content">
+                                            <div role="tabpanel" class="tab-pane active" id="home">
+                                                <form>
+                                                    <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                    <input class="btn login" type="submit" value="Είσοδος"/>
+                                                </form>
+                                            </div>
+                                            <div role="tabpanel" class="tab-pane" id="next">
+                                                <form>
+                                                    <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                    <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                    <input class="btn login" type="submit" value="Εγγραφή"/>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <button class="login-trigger" onclick="javascript:$('#myModal').modal('show');"><i class="fa fa-user" aria-hidden="true"></i></button>
+                        </div>
+                        <button class="login-trigger" onclick="javascript:$('#myModal').modal('show');"><i class="fa fa-user" aria-hidden="true"></i></button>
                         </li>
                     </ul>
                 </div>
@@ -159,7 +154,8 @@
 			</div>
 		</div>
 	</div>
-	
+    
+    <!-- SECTION -->
 	<div id="support" class="section wb">
         <div class="container">
             <!-- Breadcrumbs -->
@@ -175,7 +171,7 @@
                 <p class="lead">Οποιαδήποτε στιγμή μπορείτε να επικοινωνήσετε μαζί μας είτε τηλεφωνικώς, 
                     είτε μέσω ηλεκτρονικής αλληλογραφίας, email, ακόμη και συμπληρώνοντας την παρακάτω φόρμα παραθέτοντας τον λόγο επικοινωνίας.
                 <br>Θα απαντήσουμε στο αίτημα σας όσο το δυνατόν γρηγορότερα και αποτελεσματικά μπορούμε!</p>
-            </div><!-- end title -->
+            </div>
 
             <div class="row">
                 <div class="col-md-6">
@@ -195,6 +191,9 @@
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                     <input type="tel" name="phone" id="phone"  pattern="[0-9]{10}" class="form-control" placeholder="Τηλέφωνο">
                                 </div>
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                                    <input type="text" name="subject" id="subject" class="form-control" placeholder="Θέμα">
+                                </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Δώστε λεπτομέρειες..."></textarea>
                                 </div>
@@ -204,7 +203,7 @@
                             </fieldset>
                         </form>
                     </div>
-                </div><!-- end col -->
+                </div>
 				<div class="col-md-6">
 					<div class="right-box-contact">
 						<h4>Τηλέφωνο Επικοινωνίας</h4>
@@ -236,10 +235,11 @@
 							</div>
 						</div>
 					</div>
-				</div><!-- end col -->
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
+				</div>
+            </div>
+        </div>
+    </div>
+    <!-- end of SECTION -->
 
     <!--FOOTER-->
     <footer class="footer">
@@ -265,7 +265,7 @@
                             <li><a href="status.html">Κατάσταση μέσων</a></li>
                             <li><a href="#">Χάρτες</a></li>
                             <li><a href="#">Εισιτήρια-Κάρτες</a></li>
-							<li><a href="#">Προσβασιμότητα</a></li>
+							<li><a href="accesibility.html">Προσβασιμότητα</a></li>
 							<li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
 							<li><a href="contact.html">Επικοινωνία</a></li>
                         </ul><!-- end links -->
@@ -305,6 +305,18 @@
         </div><!-- end container -->
     </footer>
     <!--end of FOOTER-->
+
+    <!-- COPYRIGHTS -->
+    <div class="copyrights">
+            <div class="container">
+                <div class="footer-distributed">
+                    <div class="footer-left">
+                        <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
+                    </div>
+                </div>
+            </div><!-- end container -->
+    </div>
+    <!-- end of COPYRIGHTS -->
 
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
 
