--- a/EAM_3/faq.html
+++ b/EAM_3/faq.html
@@ -43,12 +43,6 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment-with-locales.js"></script>
-    <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
-
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
-
 </head>
 <body class="realestate_version">
 
@@ -62,7 +56,7 @@
     <header class="header header_style_01">
         <nav class="megamenu navbar navbar-default">
             <div class="container-fluid">
-               <!--NAV-HEADER (logo button to index.php)-->
+            <!--NAV-HEADER (logo button to index.php)-->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -89,10 +83,11 @@
                             </div>
                         </li>
                         <li class="dropdown" >
-                            <a href="#" class="dropbtn">Προσβασιμότητα</a>
+                            <a href="accesibility.html" class="dropbtn">Προσβασιμότητα</a>
                             <div class="dropdown-content">
-                                <a href="#">Σημεία Πρόσβασης</a>
-                                <a href="#">Ανακοινώσεις</a>
+                                <a href="acs_instrc.html">Οδηγίες Πρόσβασης</a>
+                                <a href="acs_points.html">Προσβάσιμα Σημεία</a>
+                                <a href="acs_news.html">Ανακοινώσεις</a>
                             </div>
                         </li> 
                         <li class="dropdown" >
@@ -103,48 +98,48 @@
                             </div>
                         </li>   
                         <li><a href="contact.html">Επικοινωνία</a></li>
-						<li class="search-option">
-							<button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
-							<form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
-								<input type="text" placeholder="Αναζήτηση...">
-								<button class="p-color-bg"><i class="fa fa-search" aria-hidden="true"></i></button>
-							</form>
-                       </li> 
-                       <li>
-                            <div id="myModal" class="modal fade">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-body">
-                                            <button data-dismiss="modal" class="close">&times;</button>
-                                            <ul class="nav nav-tabs" role="tablist">
-                                                <li role="presentation" class="active">
-                                                    <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Σύνδεση</a>
-                                                </li>
-                                                <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Εγγραφή</a>
-                                                </li>
-                                            </ul>
-                                            <div class="tab-content">
-                                                <div role="tabpanel" class="tab-pane active" id="home">
-                                                    <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                        <input class="btn login" type="submit" value="Είσοδος"/>
-                                                    </form>
-                                                </div>
-                                                <div role="tabpanel" class="tab-pane" id="next">
-                                                    <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                        <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
-                                                        <input class="btn login" type="submit" value="Εγγραφή"/>
-                                                    </form>
-                                                </div>
+                        <li class="search-option">
+                            <button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            <form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
+                                <input type="text" placeholder="Αναζήτηση...">
+                                <button class="p-color-bg"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            </form>
+                    </li> 
+                    <li>
+                        <div id="myModal" class="modal fade">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <button data-dismiss="modal" class="close">&times;</button>
+                                        <ul class="nav nav-tabs" role="tablist">
+                                            <li role="presentation" class="active">
+                                                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Σύνδεση</a>
+                                            </li>
+                                            <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Εγγραφή</a>
+                                            </li>
+                                        </ul>
+                                        <div class="tab-content">
+                                            <div role="tabpanel" class="tab-pane active" id="home">
+                                                <form>
+                                                    <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                    <input class="btn login" type="submit" value="Είσοδος"/>
+                                                </form>
+                                            </div>
+                                            <div role="tabpanel" class="tab-pane" id="next">
+                                                <form>
+                                                    <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                    <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                    <input class="btn login" type="submit" value="Εγγραφή"/>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <button class="login-trigger" onclick="javascript:$('#myModal').modal('show');"><i class="fa fa-user" aria-hidden="true"></i></button>
+                        </div>
+                        <button class="login-trigger" onclick="javascript:$('#myModal').modal('show');"><i class="fa fa-user" aria-hidden="true"></i></button>
                         </li>
                     </ul>
                 </div>
@@ -279,7 +274,7 @@
                             <li><a href="status.html">Κατάσταση μέσων</a></li>
                             <li><a href="#">Χάρτες</a></li>
                             <li><a href="#">Εισιτήρια-Κάρτες</a></li>
-							<li><a href="#">Προσβασιμότητα</a></li>
+							<li><a href="accesibility.html">Προσβασιμότητα</a></li>
 							<li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
 							<li><a href="contact.html">Επικοινωνία</a></li>
                         </ul><!-- end links -->
@@ -319,6 +314,18 @@
         </div><!-- end container -->
     </footer>
     <!--end of FOOTER-->
+
+    <!-- COPYRIGHTS -->
+    <div class="copyrights">
+        <div class="container">
+            <div class="footer-distributed">
+                <div class="footer-left">
+                    <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
+                </div>
+            </div>
+        </div><!-- end container -->
+    </div>
+    <!-- end of COPYRIGHTS -->
 
     <!--SCROLL TO TOP-->
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
