--- a/EAM_3/buses.html
+++ b/EAM_3/buses.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>ΟΑΣΑ Κατάσταση Μέσων</title>  
+    <title>ΟΑΣΑ Λεωφορεία</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -35,13 +35,6 @@
     <script src="http://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment-with-locales.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
-
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
-
     <!-- Modernizer for Portfolio -->
     <script src="js/modernizer.js"></script>
 
@@ -49,6 +42,12 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment-with-locales.js"></script>
+    <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
+
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
 
 </head>
 <body class="realestate_version">
@@ -78,8 +77,8 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Αρχική</a></li>
-                        <li><a class="active" href="status.html">Κατάσταση Μέσων</a></li>
+                        <li><a class="active" href="index.html">Αρχική</a></li>
+                        <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
                             <a href="#" class="dropbtn">Εισιτήρια-Κάρτες</a>
@@ -160,91 +159,90 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Κατάσταση μέσων</h2>
+					<h2>Λεωφορεία</h2>
 				</div>
 			</div>
 		</div>
-	</div>
+    </div>
 
-    <div class="about-box">
+    <!--SECOND SECTION-->
+	<div class="about-box">
 		<div class="container">
-            <div class="row">
+                <!-- Breadcrumbs -->
                 <nav id="breadcrumbs">
                     <ul>
                         <li><a href="index.html"><i class="fa fa-home global-radius fa-lg"></i></a></li>
-                        <li>Κατάσταση μέσων</li>
+                        <li>Λεωφορεία</li>
                     </ul>
                 </nav>
 
-                <!--<div class="col-md-12">
-                    <div class="alert">
-                        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-                        <strong>Προσοχή!</strong> Απεργία...
-                    </div>
-                </div>-->
-
-                <div class="col-md-12">
-                    <div class="navbar navbar-default">
-                        <div id="navbar2" class="navbar-collapse collapse">
-                            <ul class="nav navbar-inner">
-                                <li><a class="active" role="button" href="#">Τώρα</a></li>
-                                <li><a href="#">Αυτή την εβδομάδα</a></li>
-                                <li><a onclick="getCalendar()">Επιλογή ημερομηνίας</a>
-                                <div id="calendar" style="display:none;">
-                                    <div class="form-group">
-                                        <div class='input-group date' id='datetimepicker'>
-                                            <input type='text' class="form-control" />
-                                            <span class="input-group-addon">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <script>
-                                        $('#datetimepicker').datetimepicker({
-                                            locale: 'el',
-                                            format: 'DD/MM/YYYY',
-                                            minDate: new Date()});
-                                    </script>
-                    
-                                    <script>
-                                        function getCalendar() {
-                                          var x = document.getElementById("calendar");
-                                          if (x.style.display === "none") {
-                                                $("#calendar").slideDown("slow");
-                                            x.style.display = "block";
-                                          } else {
-                                            x.style.display = "none";
-                                          }
-                                        }
-                                    </script>
-                                </div></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3 wow slideInLeft hidden-xs hidden-sm">
+            <div class="row">
+                <div class="col-md-4 wow hidden-xs hidden-sm">
                     <div class="contact_form">
-                        <h3>Αναζήτηση Γραμμής</h3>
+                        <h2>Πληροφορίες Γραμμής</h2>
                         <form id="contactform1" class="row" name="contactform" method="post">
                             <fieldset class="row-fluid">
                                 <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="line" id="line" class="form-control" placeholder="">
+                                <br/><h4>Επιλέξτε γραμμή:</h4>
+                                    <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-offset-8 text-center">
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                    <h4>ή διεύθυνση:</h4>
+                                    <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 text-center">
                                     <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
                                 </div>
                             </fieldset>
                         </form>
-                    </div>    
+                    </div>
                 </div>
 
-                <div class="col-md-9 wow slideInRight hidden-xs hidden-sm">
-                    <div id="map"></div>
+                <div class="col-md-8">
+					<div class="item">
+                        <div class="single-feature" style="pointer-events: none;">
+                            <h1 style="text-align: left;"><i class="fa fa-question-circle"></i> Οδηγίες</h1>
+                            <h5 style="text-align: left;">Για πληροφορίες σχετικά με τον προγραμματισμό, χρησιμοποιήστε το εργαλείο <strong>"Πληροφορίες Γραμμής"</strong>.</h5>
+                            <h5 style="text-align: left;">Για πληροφορίες σχετικά με αφίξεις, χρησιμοποιήστε το εργαλείο <strong>"Πληροφορίες Στάσης"</strong>.</h5>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-md-8">
+					<div class="item">
+                        <div class="single-feature" style="margin-top:50px;">
+                            <h1 style="text-align: left;"><i class="fa fa-info-circle"></i><a href="contact.html"> Στοιχεία επικοινωνίας</a></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br/>
+            <div class="row">
+                <div class="col-md-4 wow hidden-xs hidden-sm">
+                    <div class="contact_form">
+                        <h2>Πληροφορίες Στάσης</h2>
+                        <form id="contactform1" class="row" name="contactform" method="post">
+                            <fieldset class="row-fluid">
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                    <br/><h4>Επιλέξτε στάση:</h4>
+                                        <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                </div>
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                    <h4>ή διεύθυνση:</h4>
+                                    <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 text-center">
+                                    <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!--END OF SECOND SECTION-->
 
     <!--FOOTER-->
     <footer class="footer">
@@ -270,7 +268,7 @@
                             <li><a href="status.html">Κατάσταση μέσων</a></li>
                             <li><a href="#">Χάρτες</a></li>
                             <li><a href="#">Εισιτήρια-Κάρτες</a></li>
-							<li><a href="accesibility.html">Προσβασιμότητα</a></li>
+							<li><a href="#">Προσβασιμότητα</a></li>
 							<li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
 							<li><a href="contact.html">Επικοινωνία</a></li>
                         </ul><!-- end links -->
@@ -310,18 +308,6 @@
         </div><!-- end container -->
     </footer>
     <!--end of FOOTER-->
-
-    <!-- COPYRIGHTS -->
-    <div class="copyrights">
-        <div class="container">
-            <div class="footer-distributed">
-                <div class="footer-left">
-                    <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
-                </div>
-            </div>
-        </div><!-- end container -->
-    </div>
-    <!-- end of COPYRIGHTS -->    
 
     <!--SCROLL TO TOP-->
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
