--- a/EAM_3/index.html
+++ b/EAM_3/index.html
@@ -299,7 +299,7 @@
 					<div class="item">
 						<div class="single-feature">
                             <div class="icon"><i class="fa fa-bus fa-5x" style="height: 25%; width: 25%; float:left;"></i>
-                                <h4><a href="#">Λεωφορεία</a></h4>
+                                <h4><a href="buses.html">Λεωφορεία</a></h4>
                                 <h4><a href="#">Τρόλει</a></h4>
                             </div>  
                         </div> 
