--- a/EAM_3/buses.html
+++ b/EAM_3/buses.html
@@ -178,24 +178,56 @@
 
             <div class="row">
                 <div class="col-md-4 wow hidden-xs hidden-sm">
-                    <div class="contact_form">
-                        <h2>Πληροφορίες Γραμμής</h2>
-                        <form id="contactform1" class="row" name="contactform" method="post">
-                            <fieldset class="row-fluid">
-                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                <br/><h4>Επιλέξτε γραμμή:</h4>
-                                    <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
-                                </div>
-                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                    <h4>ή διεύθυνση:</h4>
-                                    <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 text-center">
-                                    <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
-                                </div>
-                            </fieldset>
-                        </form>
+
+                    <ul class="nav nav-pills" id="mynav">
+                        <li class="active"><a data-toggle="pill" href="#lines">Γραμμές</a></li>
+                        <li><a data-toggle="pill" href="#stops">Στάσεις</a></li>
+                    </ul>
+
+                    <div class="tab-content">
+                        <div id="lines" class="tab-pane fade in active">
+                            <div class="contact_form">
+                                <h2>Πληροφορίες Γραμμής</h2>
+                                <form id="contactform1" class="row" name="contactform" method="post">
+                                    <fieldset class="row-fluid">
+                                        <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                        <br/><h4>Επιλέξτε γραμμή:</h4>
+                                            <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                        </div>
+                                        <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                            <h4>ή διεύθυνση:</h4>
+                                            <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 text-center">
+                                            <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </div>
+
+                        <div id="stops" class="tab-pane fade">
+                            <div class="contact_form">
+                                <h2>Πληροφορίες Στάσης</h2>
+                                <form id="contactform1" class="row" name="contactform" method="post">
+                                    <fieldset class="row-fluid">
+                                        <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                            <br/><h4>Επιλέξτε στάση:</h4>
+                                                <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                        </div>
+                                        <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                            <h4>ή διεύθυνση:</h4>
+                                            <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 text-center">
+                                            <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </div>
                     </div>
+                    
                 </div>
 
                 <div class="col-md-8">
@@ -217,29 +249,6 @@
                 </div>
             </div>
 
-            <br/>
-            <div class="row">
-                <div class="col-md-4 wow hidden-xs hidden-sm">
-                    <div class="contact_form">
-                        <h2>Πληροφορίες Στάσης</h2>
-                        <form id="contactform1" class="row" name="contactform" method="post">
-                            <fieldset class="row-fluid">
-                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                    <br/><h4>Επιλέξτε στάση:</h4>
-                                        <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
-                                </div>
-                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
-                                    <h4>ή διεύθυνση:</h4>
-                                    <input type="text" name="line" id="line" class="form-control" style="margin-top:5px;" placeholder="">
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 text-center">
-                                    <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     <!--END OF SECOND SECTION-->
